--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Tren Ma"
-  avatar           : "avatar2.jpg"
+  avatar           : "avatar.jpg"
   bio              : "PhD Candidate"
   location         : "Glasgow"
   employer         :
